--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,18 @@
     font-family: "Poppins", sans-serif;
 }
 
-.hero {
-    background: url('/hero-bg.jpg') top/cover;
+body{
+    overflow-x: hidden;
+}
+
+/* .hero {
+    background: url('/hero-bg.jpg') rgba(0, 0, 0, 0.2) top/cover;
+    background-blend-mode: darken;
+} */
+
+.discover {
+    background: url('/ocean.jpg') rgba(0, 0, 0, 0.3) top/cover;
+    background-blend-mode: darken;
 }
 
 .outline {
