--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,15 +13,14 @@ html {
     overflow-x: hidden;
 }
 
-/* .hero {
-    background: url('/hero-bg.jpg') rgba(0, 0, 0, 0.2) top/cover;
+.contact {
+    background: url('/contact-bg.jpg') rgba(0, 0, 0, 0.5) right/cover;
     background-blend-mode: darken;
-} */
+}
 
-/* .discover {
-    background: url('/ocean.jpg') rgba(0, 0, 0, 0.3) top/cover;
-    background-blend-mode: darken;
-} */
+input, textarea{
+    backdrop-filter: blur(4px);
+}
 
 .outline {
     -webkit-text-stroke: 3px white;
