--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,7 +27,7 @@ a.active{
 }
 
 .allplaces{
-    background: url('../public/hero-bg.jpg') rgba(0, 0, 0, 0.3) top repeat;
+    background: url('/hero-bg.jpg') rgba(0, 0, 0, 0.3) top repeat;
     background-blend-mode: darken;
 }
 
