--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,13 @@
 }
 
 html {
+    width: 100vw;
     overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 .contact {
@@ -18,15 +24,16 @@ html {
     background-blend-mode: darken;
 }
 
-input, textarea{
+input,
+textarea {
     backdrop-filter: blur(4px);
 }
 
-a.active{
+a.active {
     background: rgba(255, 255, 255, .25);
 }
 
-.allplaces{
+.allplaces {
     background: url('/hero-bg.jpg') rgba(0, 0, 0, 0.3) top repeat;
     background-blend-mode: darken;
 }
